# ABC-01

./: README.md  ReadMe.txt
01-proc-c++/: CMakeLists.txt  aforizm.cpp  aforizm.h  container.cpp  container.h  main.cpp  poslovica.cpp  poslovica.h  rnd.h  wisdom.cpp  wisdom.h  zagadka.cpp  zagadka.h
